Add title to the list page

--- a/templates/list.html
+++ b/templates/list.html
@@ -6,6 +6,8 @@
 </head>
 <body>
 
+<h1>List of registered entries</h1>
+
 <ul>
     {{range .Items}}
     <li><a href="{{.Long}}">{{.Short}}</a> - created: {{.CreatedAt}}</li>
